	 movie recording under the widget UIs (more of patch #1439280) (Gergely
	 Szasz).
20060515 display.c: Restore hires/standard mixed mode support in borders (Fred).
20060603 sound/sdlsound.c: Add 10ms delay if SDL sound fifo is full (meaning
         we already have a frame worth of sound information built up) to ease
         up on CPU usage (Fred).
20060625 machines/spec_se.c: SE does not have 128 style memory lockout (Fred).
20060625 roms/se-0.rom: Change 3 bytes at 0x240 to XOR A, OUT (00), A instead
         of XOR A, OUT (FF), A to properly reset the SCLD.
20060702 fuse.c: reset AY chip when starting sound (fixes bug #1515666).
20060702 z80/z80.pl: get contention right for EX (SP),HL, EX (SP), IX and
	 EX (SP),IY (thanks, Mark Woodmass).
20060702 z80/z80.pl: swap order of writes in EX (SP),HL and friends (thanks,
	 Mark Woodmass).
20060713 z80/tests/{e3.in,dde3.in,fde3.in}: update tests to match corrections
	 to EX (SP),HL and friends.
20060714 z80/coretest.c,z80/tests/{d{3,b},ed{4,5,6,7}{0,1,8,9},
	 ed{a,b}{2,3,a,b}}.out: update IN and OUT tests so we actually
	 pass our own test suite.
20060714 z80/tests/{README,d{3,b}_{1,2,3}.{in,out}}: add tests to explicitly
	 check for all four contention possibilities on IO.
20060714 z80/z80.pl, z80/tests/edb{3,b}.out: get contention right for
	 OTIR and OTDR (thanks, Mark Woodmass).
20060715 fuse.[ch],settings.dat,tape.[ch],timer.c: implement fastloading
	 (part of patch #1511906; also thanks to Gergely Szasz for patch
	 #1291273).
20060716 timer.c: #include "ula.h"
20060716 pokerfinder/pokefinder.c: remove unused variable.
20060716 tape.c,man/fuse.1,ui/options.dat: reset speed estimate when
	 fastloading finished. Add fastloading option to General Options
	 dialog. Document fastloading.
20060721 display.c,screenshot.c,screenshot.h,ui/gtk/gtkui.c,widget/menu.c:
         Allow movie paths to be up to PATH_MAX (Fred).
20060721 ui/options.dat: Stop key binding clash over f in SDL ui (Fred).