@@ -54,3 +54,8 @@ d{3,b}_{1,2,3}: check for correct port contention on IO in the four
 	        relevant states (port high byte in 0x40 to 0x7f or not,
 		port low bit set or reset).
 
+dd00.in, ddfd00.in: test timings of "extended NOP" opcodes DD 00 and
+		    DD FD 00; the extra 00 at the end is to check the
+		    next opcode executes at the right time (bug fixed
+		    on 20060722).
+
